@@ -17,6 +17,12 @@
 #' FALSE, then prior probabilities are not used and it is assumed that each
 #' gene is equally likely to have a significant CpG site associated with it.
 #' 
+#' The testing now also takes into account that some CpGs map to multiple genes. 
+#' For a small number of gene families, this previously caused their associated 
+#' GO categories/gene sets to be erroneously overrepresented and thus highly 
+#' significant. If \code{fract.counts=FALSE} then CpGs are allowed to map to 
+#' multiple genes (this is NOT recommended).
+#' 
 #' Genes associated with each CpG site are obtained from the annotation package
 #' \code{IlluminaHumanMethylation450kanno.ilmn12.hg19} if the array type is
 #' "450K". For the EPIC array, the annotation package
@@ -24,7 +30,7 @@
 #' different annotation package, please supply it using the \code{anno}
 #' argument. 
 #' 
-#' In order to get a list which contains the mapped Entrez gene IDS,
+#' In order to get a list which contains the mapped Entrez gene IDs,
 #' please use the \code{getMappedEntrezIDs} function. \code{gometh} tests all
 #' GO or KEGG terms, and false discovery rates are calculated using the method
 #' of Benjamini and Hochberg (1995).  The \code{limma} functions \code{topGO}
@@ -50,7 +56,11 @@
 #' array annotation as generated by the \code{\link{minfi}}.
 #' \code{\link{getAnnotation}} function. Speeds up execution, if provided.
 #' @param equiv.cpg Logical, if true then equivalent numbers of cpgs are used
-#' for odds calculation rather than total number cpgs.
+#' for odds calculation rather than total number cpgs. Only used if 
+#' \code{prior.prob=TRUE}.
+#' @param fract.counts Logical, if true then fractional counting of cpgs is used
+#' to account for cgps that map to multiple genes. Only used if 
+#' \code{prior.prob=TRUE}.
 #' @return A data frame with a row for each GO or KEGG term and the following
 #' columns: \item{Term}{ GO term if testing GO pathways } \item{Ont}{ ontology
 #' that the GO term belongs to if testing GO pathways. "BP" - biological
@@ -122,7 +132,8 @@
 #' @export gometh
 gometh <- function(sig.cpg, all.cpg=NULL, collection=c("GO","KEGG"), 
                    array.type = c("450K","EPIC"), plot.bias=FALSE, 
-                   prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE)
+                   prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE, 
+                   fract.counts = TRUE)
   # Gene ontology testing or KEGG pathway analysis for Illumina methylation 
   # arrays based on goseq
   # Takes into account probability of differential methylation based on
@@ -137,7 +148,8 @@ gometh <- function(sig.cpg, all.cpg=NULL, collection=c("GO","KEGG"),
     go <- .getGO()
     result <- gsameth(sig.cpg=sig.cpg, all.cpg=all.cpg, collection=go$idList, 
                       array.type=array.type, plot.bias=plot.bias, 
-                      prior.prob=prior.prob, anno=anno, equiv.cpg=equiv.cpg)
+                      prior.prob=prior.prob, anno=anno, equiv.cpg=equiv.cpg,
+                      fract.counts=fract.counts)
     result <- merge(go$idTable,result,by.x="GOID",by.y="row.names")
     rownames(result) <- result$GOID
 
@@ -145,7 +157,8 @@ gometh <- function(sig.cpg, all.cpg=NULL, collection=c("GO","KEGG"),
     kegg <- .getKEGG()
     result <- gsameth(sig.cpg=sig.cpg, all.cpg=all.cpg, collection=kegg$idList, 
                       array.type=array.type, plot.bias=plot.bias, 
-                      prior.prob=prior.prob, anno=anno, equiv.cpg=equiv.cpg)
+                      prior.prob=prior.prob, anno=anno, equiv.cpg=equiv.cpg,
+                      fract.counts=fract.counts)
     result <- merge(kegg$idTable,result,by.x="PathwayID",by.y="row.names")
     rownames(result) <- result$PathwayID
   }
