@@ -19,6 +19,12 @@
 #' each gene is equally likely to have a significant CpG site associated with
 #' it. 
 #' 
+#' The testing now also takes into account that some CpGs map to multiple genes. 
+#' For a small number of gene families, this previously caused their associated 
+#' GO categories/gene sets to be erroneously overrepresented and thus highly 
+#' significant. If \code{fract.counts=FALSE} then CpGs are allowed to map to 
+#' multiple genes (this is NOT recommended).
+#' 
 #' Genes associated with each CpG site are obtained from the annotation
 #' package \code{IlluminaHumanMethylation450kanno.ilmn12.hg19} if the array
 #' type is "450K". For the EPIC array, the annotation package
@@ -52,7 +58,11 @@
 #' array annotation as generated by the \code{\link{minfi}}.
 #' \code{\link{getAnnotation}} function. Speeds up execution, if provided.
 #' @param equiv.cpg Logical, if true then equivalent numbers of cpgs are used
-#' for odds calculation rather than total number cpgs.
+#' for odds calculation rather than total number cpgs. Only used if 
+#' \code{prior.prob=TRUE}.
+#' @param fract.counts Logical, if true then fractional counting of cpgs is used
+#' to account for cgps that map to multiple genes. Only used if 
+#' \code{prior.prob=TRUE}.
 #' @return A data frame with a row for each GO or KEGG term and the following
 #' columns: \item{Term}{ GO term if testing GO pathways } \item{Ont}{ ontology
 #' that the GO term belongs to if testing GO pathways. "BP" - biological
@@ -132,7 +142,8 @@
 #' @export goregion
 goregion <- function(regions, all.cpg=NULL, collection=c("GO","KEGG"), 
                      array.type = c("450K","EPIC"), plot.bias=FALSE, 
-                     prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE)
+                     prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE,
+                     fract.counts = TRUE)
   # Gene ontology testing or KEGG pathway analysis for differentially methylated regions
   # Takes into account probability of differential methylation based on
   # numbers of probes on array per gene
@@ -164,7 +175,8 @@ goregion <- function(regions, all.cpg=NULL, collection=c("GO","KEGG"),
   
   result <- gometh(sig.cpg=sig.cpg, all.cpg=all.cpg, collection=collection, 
                    array.type=array.type, plot.bias=plot.bias, 
-                   prior.prob=prior.prob, anno=anno, equiv.cpg=equiv.cpg)
+                   prior.prob=prior.prob, anno=anno, equiv.cpg=equiv.cpg,
+                   fract.counts=fract.counts)
   result
 }  
 
@@ -190,6 +202,12 @@ goregion <- function(regions, all.cpg=NULL, collection=c("GO","KEGG"),
 #' (Young et al., 2010). If \code{prior.prob} is set to FALSE, then prior
 #' probabilities are not used and it is assumed that each gene is equally
 #' likely to have a significant CpG site associated with it. 
+#' 
+#' The testing now also takes into account that some CpGs map to multiple genes. 
+#' For a small number of gene families, this previously caused their associated 
+#' GO categories/gene sets to be erroneously overrepresented and thus highly 
+#' significant. If \code{fract.counts=FALSE} then CpGs are allowed to map to 
+#' multiple genes (this is NOT recommended).
 #' 
 #' Genes associated with each CpG site are obtained from the annotation package
 #' \code{IlluminaHumanMethylation450kanno.ilmn12.hg19} if the array type is
@@ -218,7 +236,11 @@ goregion <- function(regions, all.cpg=NULL, collection=c("GO","KEGG"),
 #' array annotation as generated by the \code{\link{minfi}}
 #' \code{\link{getAnnotation}} function. Speeds up execution, if provided.
 #' @param equiv.cpg Logical, if true then equivalent numbers of cpgs are used
-#' for odds calculation rather than total number cpgs.
+#' for odds calculation rather than total number cpgs. Only used if 
+#' \code{prior.prob=TRUE}.
+#' @param fract.counts Logical, if true then fractional counting of cpgs is used
+#' to account for cgps that map to multiple genes. Only used if 
+#' \code{prior.prob=TRUE}.
 #' @return A data frame with a row for each gene set and the following columns:
 #' \item{N}{ number of genes in the gene set } \item{DE}{ number of genes that
 #' are differentially methylated } \item{P.DE}{ p-value for over-representation
@@ -294,7 +316,8 @@ goregion <- function(regions, all.cpg=NULL, collection=c("GO","KEGG"),
 #' @export gsaregion
 gsaregion <- function(regions, all.cpg=NULL, collection, 
                       array.type = c("450K","EPIC"), plot.bias=FALSE, 
-                      prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE)
+                      prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE, 
+                      fract.counts=TRUE)
   # Generalised version of goregion with user-specified gene sets 
   # Gene sets collections must be Entrez Gene ID
   # Takes into account probability of differential methylation based on
@@ -325,6 +348,7 @@ gsaregion <- function(regions, all.cpg=NULL, collection,
   
   result <- gsameth(sig.cpg=sig.cpg, all.cpg=all.cpg, collection=collection, 
                    array.type=array.type, plot.bias=plot.bias, 
-                   prior.prob=prior.prob, anno=anno, equiv.cpg=equiv.cpg)
+                   prior.prob=prior.prob, anno=anno, equiv.cpg=equiv.cpg,
+                   fract.counts=fract.counts)
   result
 }
