@@ -18,7 +18,13 @@
 #' probabilities are not used and it is assumed that each gene is equally
 #' likely to have a significant CpG site associated with it. 
 #' 
-#' Genes associated #' with each CpG site are obtained from the annotation 
+#' The testing now also takes into account that some CpGs map to multiple genes. 
+#' For a small number of gene families, this previously caused their associated 
+#' GO categories/gene sets to be erroneously overrepresented and thus highly 
+#' significant. If \code{fract.counts=FALSE} then CpGs are allowed to map to 
+#' multiple genes (this is NOT recommended). 
+#' 
+#' Genes associated with each CpG site are obtained from the annotation 
 #' package \code{IlluminaHumanMethylation450kanno.ilmn12.hg19} if the array 
 #' type is "450K". For the EPIC array, the annotation package
 #' \code{IlluminaHumanMethylationEPICanno.ilm10b4.hg19} is used. To use a
@@ -45,7 +51,11 @@
 #' array annotation as generated by the \code{\link{minfi}}
 #' \code{\link{getAnnotation}} function. Speeds up execution, if provided.
 #' @param equiv.cpg Logical, if true then equivalent numbers of cpgs are used
-#' for odds calculation rather than total number cpgs.
+#' for odds calculation rather than total number cpgs. Only used if 
+#' \code{prior.prob=TRUE}.
+#' @param fract.counts Logical, if true then fractional counting of cpgs is used
+#' to account for cgps that map to multiple genes. Only used if 
+#' \code{prior.prob=TRUE}.
 #' @return A data frame with a row for each gene set and the following columns:
 #' \item{N}{ number of genes in the gene set } \item{DE}{ number of genes that
 #' are differentially methylated } \item{P.DE}{ p-value for over-representation
@@ -116,7 +126,8 @@
 #' @export gsameth
 gsameth <- function(sig.cpg, all.cpg=NULL, collection, 
                     array.type = c("450K","EPIC"), plot.bias=FALSE, 
-                    prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE)
+                    prior.prob=TRUE, anno=NULL, equiv.cpg = TRUE,
+                    fract.counts = TRUE)
   # Generalised version of gometh with user-specified gene sets 
   # Gene sets collections must be Entrez Gene ID
   # Can take into account probability of differential methylation 
@@ -154,18 +165,18 @@ gsameth <- function(sig.cpg, all.cpg=NULL, collection,
   # Make sure only collections with geneids present in universe are included
   inUniv <- lapply(collection, function(x) sum(eg.universe %in% x))
   collection <- collection[inUniv!=0]
-  
+
   # Estimate prior probabilities
   if(prior.prob){
-    if(equiv.cpg){
-      pwf <- .estimatePWF(D=test.de,bias=as.vector(equiv))
-      if(plot.bias)
-        .plotBias(D=test.de,bias=as.vector(equiv))
-    }
-    else{
-      pwf <- .estimatePWF(D=test.de,bias=as.vector(freq_genes))
-      if(plot.bias)
-        .plotBias(D=test.de,bias=as.vector(freq_genes))
+    if(equiv.cpg){ 
+        # use "equivalent" no. of cpgs in odds calculation
+        pwf <- .estimatePWF(D=test.de,bias=as.vector(equiv))
+        if(plot.bias)
+            .plotBias(D=test.de,bias=as.vector(equiv))
+    } else {
+        pwf <- .estimatePWF(D=test.de,bias=as.vector(freq_genes))
+        if(plot.bias)
+            .plotBias(D=test.de,bias=as.vector(freq_genes))
     }
   }
   
@@ -173,8 +184,16 @@ gsameth <- function(sig.cpg, all.cpg=NULL, collection,
   colnames(results) <- c("N","DE","P.DE","FDR")
   rownames(results) <- names(collection)
   results[,"N"] <- unlist(lapply(collection,length))
-  results[,"DE"] <- unlist(lapply(collection, function(x) 
-      sum((sorted.eg.sig %in% x) * frac$frac)))
+  
+  if(prior.prob & fract.counts){ 
+      # use fractional counting to account for cpgs that map to multiple genes
+      results[,"DE"] <- unlist(lapply(collection, function(x) 
+          sum((sorted.eg.sig %in% x) * frac$frac)))
+  } else {
+      results[,"DE"] <- unlist(lapply(collection, function(x) 
+          sum((sorted.eg.sig %in% x))))
+  } 
+  
   Nuniverse <- length(eg.universe)
   m <- length(sorted.eg.sig)
   
