@@ -12,7 +12,8 @@ gometh(
   plot.bias = FALSE,
   prior.prob = TRUE,
   anno = NULL,
-  equiv.cpg = TRUE
+  equiv.cpg = TRUE,
+  fract.counts = TRUE
 )
 }
 \arguments{
@@ -40,7 +41,12 @@ array annotation as generated by the \code{\link{minfi}}.
 \code{\link{getAnnotation}} function. Speeds up execution, if provided.}
 
 \item{equiv.cpg}{Logical, if true then equivalent numbers of cpgs are used
-for odds calculation rather than total number cpgs.}
+for odds calculation rather than total number cpgs. Only used if 
+\code{prior.prob=TRUE}.}
+
+\item{fract.counts}{Logical, if true then fractional counting of cpgs is used
+to account for cgps that map to multiple genes. Only used if 
+\code{prior.prob=TRUE}.}
 }
 \value{
 A data frame with a row for each GO or KEGG term and the following
@@ -72,6 +78,12 @@ the \code{kegga} function for KEGG testing, both of which are from the
 FALSE, then prior probabilities are not used and it is assumed that each
 gene is equally likely to have a significant CpG site associated with it.
 
+The testing now also takes into account that some CpGs map to multiple genes. 
+For a small number of gene families, this previously caused their associated 
+GO categories/gene sets to be erroneously overrepresented and thus highly 
+significant. If \code{fract.counts=FALSE} then CpGs are allowed to map to 
+multiple genes (this is NOT recommended).
+
 Genes associated with each CpG site are obtained from the annotation package
 \code{IlluminaHumanMethylation450kanno.ilmn12.hg19} if the array type is
 "450K". For the EPIC array, the annotation package
@@ -79,7 +91,7 @@ Genes associated with each CpG site are obtained from the annotation package
 different annotation package, please supply it using the \code{anno}
 argument. 
 
-In order to get a list which contains the mapped Entrez gene IDS,
+In order to get a list which contains the mapped Entrez gene IDs,
 please use the \code{getMappedEntrezIDs} function. \code{gometh} tests all
 GO or KEGG terms, and false discovery rates are calculated using the method
 of Benjamini and Hochberg (1995).  The \code{limma} functions \code{topGO}
