@@ -2,7 +2,16 @@
 \title{missMethyl News}
 \encoding{UTF-8}
 
-\section{Version 1.15.2}{\itemize{
+\section{Version 1.20.3}{\itemize{
+
+\item Added \code{fract.counts} logical parameter to enable fractional counting of CpGs 
+to be turned off in gometh, gsameth, goregion and gsaregion. This switches off 
+the adjustment for CpGs that map to multiple genes. This is primarily intended 
+for comparison with earlier versions and we strongly encourage it to be set to 
+TRUE.
+}}
+
+\section{Version 1.20.0}{\itemize{
 
 \item Updated gsameth to take into account that some CpGs map to multiple genes. For a small number of gene families, this previously caused their associated GO categories/gene sets to be erroneously overrepresented and thus highly significant.    
 \item Updated gometh to call gsameth to perform statistical testing for GO categories and KEGG pathways; goana and kegga are no longer used.
